fix: fix z-index of banners on member pages

--- a/src/App.scss
+++ b/src/App.scss
@@ -284,6 +284,7 @@ blockquote {
   width: 100%;
   height: 100%;
   opacity: 1;
+  z-index: -2;
 }
 
 .backdrop-overlay {
@@ -296,6 +297,7 @@ blockquote {
 
   width: 100%;
   height: 100%;
+  z-index: -2;
   background: linear-gradient(to bottom,  rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
 }
 
